# SwitchRecomp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  PLANS.md  README.md  RESEARCH.md  ROADMAP.md  devenv.nix  flake.nix
.github/: pull_request_template.md
config/: title-hash-registry.example.toml
crates/recomp-cli/: Cargo.toml
crates/recomp-cli/src/: automation.rs  main.rs
crates/recomp-runtime/: Cargo.toml
crates/recomp-runtime/src/: audio.rs  boot.rs  homebrew.rs  input.rs  input_replay.rs  lib.rs  memory.rs
crates/recomp-validation/: Cargo.toml
crates/recomp-validation/src/: artifacts.rs  lib.rs  main.rs  video.rs
crates/recomp-validation/tests/: artifacts.rs  video_validation.rs
docs/: DEVELOPMENT.md  LEGAL-POLICY.md  RELEASE-CHECKLIST.md  SPECS-CHANGELOG.md  artifact-index-schema.json  artifact-index-schema.md  automated-recomp-architecture-plan.md  automation-loop.md  batch-manifest-schema.json  batch-manifest-schema.md  batch-pipeline-layout.md  dkcr-hd-boot-path.md  dkcr-hd-first-level.md  dkcr-hd-runbook.md  dkcr-validation-prereqs.md  exploratory-pipeline.md  input-replay.md  llm-assisted-decompilation-long-tail.md  local-roundtrip-trial.md  packaging.md  reference-media.md  run-manifest-schema.json  run-manifest-schema.md  static-recomp-skills.md  static-recompilation-flow.md  target-platform-assumptions.md  target-platform-baseline.toml  title-a24b9e807b456252-boot-path.md  title-a24b9e807b456252-first-level.md  title-a24b9e807b456252-runbook.md  title-a24b9e807b456252-validation-prereqs.md  title-hash-ingest.md  title-run-sheet-template.md  validation-artifacts.md  validation-baseline.md  validation-matrix-template.md  validation-traces.md  (+2 more)
(+166 files in other folders)
