[workspace]
members = [
  "crates/recomp-cli",
  "crates/recomp-gfx",
  "crates/recomp-isa",
  "crates/recomp-pipeline",
  "crates/recomp-runtime",
  "crates/recomp-services",
  "crates/recomp-timing",
  "crates/recomp-validation",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
