[package]
name = "recomp-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
recomp-pipeline = { path = "../recomp-pipeline" }
recomp-validation = { path = "../recomp-validation" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "recomp"
path = "src/main.rs"
