[package]
name = "recomp-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
recomp-gfx = { path = "../recomp-gfx" }
recomp-services = { path = "../recomp-services" }
recomp-timing = { path = "../recomp-timing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
